# pyrona-artifact

./: .dockerignore  .gitignore  DIFFERENCES.md  Dockerfile  GUIDE.md  LICENSE  README.md  RELEASE.md  env.env
.github/workflows/: bundle-pyperformance.yml  docker-images.yml
app/immutability/: Artifact.py  artifact.py  pyproject.toml  util.py
app/immutability/pages/: 01_Basics.py  02_Shallow_Immutable_Objects.py  03_Freezability.py  04_Freezing_Functions.py  05_Types_and_Decorators.py  06_Freezing_Modules.py  08_Escape_Hatches.py  09_Sub-Interpreters.py  10_Benchmarks.py  1_Basics.py  1_basic-immutability.py  2_Shallow_Immutable_Objects.py  3_Freezability.py  4_Freezing_Functions.py  5_Freezing_Types.py  5_Types_and_Decorators.py  6_Freezing_Modules.py  7_Pre-Freeze_Hook.py  7_benchmarks.py  8_Escape_Hatches.py  8_Sub-Interpreters.py  9_Benchmarks.py
benchmarks/pickling-vs-freeze/: README.md  compare.py  microbenchmark.py  run.sh
benchmarks/pyperformance/: .gitignore  README.md  build-venv.sh  build_wheelhouse.sh  plot.py  run.sh
benchmarks/tests/: README.md  compare.py  run.sh
scripts/: build_cpython.sh  build_navigation_guide.py  create_cpython_snapshots.sh  smoketest.sh
scripts/release/: upload_zenodo.sh
scripts/setup/: 1_build_cpython.sh  2_build_venv.sh  3_pyperformance_setup.sh
scripts/update/: 1_create_cpython_snapshots.sh  2_build_navigation_guide.py  3_update_uvlock.sh
snapshots/: info.txt
snapshots/cpython-patched/: Makefile.pre.in  benchmark-pickle.py  configure  configure.ac
uv/: README.md
uv/stable/: pyproject.toml
(+250 files in other folders)
